ROUTES: Applying new pattern.
